# tuwunel-admin

./: .gitignore  .goreleaser.yaml  Cargo.toml  LICENSE  Makefile  README.md  config.sample.toml
src/: appservices.rs  commands.rs  config.rs  federation.rs  handlers.rs  log.rs  main.rs  matrix.rs  media.rs  parse.rs  rooms.rs  server.rs  tokens.rs  users.rs
src/handlers/: appservices.rs  federation.rs  media.rs  mod.rs  rooms.rs  server.rs  tokens.rs  users.rs
static/: oat.min.css  style.css
templates/: _sidebar.html  dashboard.html  layout.html  login.html  module.html
templates/appservices/: detail.html  list.html
templates/federation/: index.html
templates/media/: index.html
templates/partials/: console_log.html  flash.html
templates/rooms/: detail.html  list.html
templates/server/: admin.html  config.html  index.html  stats.html
templates/tokens/: list.html
templates/users/: detail.html  list.html
