[package]
name = "tuwunel-admin"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "fs"] }
tower-sessions = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tera = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
clap = { version = "4", features = ["derive"] }
urlencoding = "2"

[profile.release]
lto = "thin"
strip = true
