[package]
name = "tuwunel-admin"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["fs"] }
tower-sessions = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tera = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
urlencoding = "2"

[profile.release]
lto = "thin"
strip = true
